<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserProfileActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_complete_profile"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_marginTop="@dimen/profile_user_image_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/colorLightGrey"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_user_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_user_image">

                <com.technoqueue.utils.EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name">

                <com.technoqueue.utils.EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name">

                <com.technoqueue.utils.EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_mobile_number"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <com.technoqueue.utils.EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_radio_button_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/btn_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_mobile_number">

                <com.technoqueue.utils.RadioButton
                    android:id="@+id/rb_customer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="Customer"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

                <com.technoqueue.utils.RadioButton
                    android:id="@+id/rb_vendor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="Vendor"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />
            </RadioGroup>

            <com.technoqueue.utils.Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>