...
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
...
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.technoqueue.utils.TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/forgot_password_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.technoqueue.utils.Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
...
