...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background" />
        </FrameLayout>

        <com.technoqueue.utils.TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/item_grey_border_background"
...
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="123456789" />

        <com.technoqueue.utils.Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mobile_number"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
...
