<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_welcome"
        android:icon="@drawable/ic_vector_dashboard"
        android:title="@string/title_welcome" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_vector_products"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_vector_products"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_sold_products"
        android:icon="@drawable/ic_vector_sold_products"
        android:title="@string/title_sold_products" />

</menu>