<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_product"
        android:icon="@drawable/ic_vector_add_product"
        android:title="@string/action_add_product"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_storefront"
        android:icon="@drawable/ic_vector_edit_storefront"
        android:title="Edit Storefront"
        app:showAsAction="always" />
</menu>